--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <div class="intro">
   <h1>🎉 Happy Birthday Kevin 🎉</h1>
-  <p>Selamat menikmati kejutan spesialmu!</p>
+  <p>Panjang Umur dan Sehat Selalu Yaa</p>
 </div>
 
 <canvas id="confetti"></canvas>
