--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   setInterval(draw, 33);
 
   setTimeout(function () {
-    window.location.href = "https://cungcung.github.io/hbd_kevin/";
+    window.location.href = "https://cungcung.github.io/kartu-ulang-tahun/";
   }, 5000);
 </script>
 
